- Social media images added - Social media links finished

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www.teamups.net/teamup/3227/Stella-First-Flight" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Stella: First Flight">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-name">Stella First Flight</div>
+                                <div class="project-name">Stella: First Flight</div>
                                 <div class="project-category text-faded">A casual 2D side scroller space game made with Unity for Android and iOS</div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/4.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/4.png" class="img-responsive" alt="AAA Northampton County Website">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://play.google.com/store/apps/details?id=com.ecotechmarine.ecosmartlive_android&hl=en" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/5.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/5.png" class="img-responsive" alt="EcoSmart Live">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">EcoSmart Live</div>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://www.mrblueshirt.com/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="Mr. Blue Shirt Website">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
@@ -200,16 +200,15 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.linkedin.com/in/mannej/" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/linkedin.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Linkedin">
                         </a>
                         <h3>Linkedin</h3>
-                        <!--<p class="text-muted">Our templates are updated regularly so they don't break.</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://github.com/Eg0Jemima" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Github">
                         </a>
                         <h3>Github</h3>
                         <!--<p class="text-muted">You can use this theme as is, or you can make changes!</p>-->
@@ -218,7 +217,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.twitch.tv/eg0jemima" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/twitch.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Twitch">
                         </a>
                         <h3>Twitch</h3>
                         <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
@@ -227,7 +226,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://twitter.com/Eg0jemima" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Twitter">
                         </a>
                         <h3>Twitter</h3>
                         <!--<p class="text-muted">You have to make your websites with love these days!</p>-->
@@ -239,7 +238,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://connect.unity.com/u/5849fa5032b30600272b73dc" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/unityconnect.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Unity Connect">
                         </a>
                         <h3>Unity Connect</h3>
                         <!--<p class="text-muted">Our templates are updated regularly so they don't break.</p>-->
@@ -248,7 +247,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.hackerrank.com/Eg0jemima" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/hackerrank.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Hackerrank">
                         </a>
                         <h3>Hackerrank</h3>
                         <!--<p class="text-muted">You can use this theme as is, or you can make changes!</p>-->
@@ -257,7 +256,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="http://stackoverflow.com/users/3232829/eg0jemima" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/stackoverflow.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Stack Overflow">
                         </a>
                         <h3>Stack Overflow</h3>
                         <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
@@ -266,7 +265,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://soundcloud.com/ej-mann" target="_blank">
-                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                            <img src="img/icons/soundcloud.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="100" width="90" alt="Sound Cloud">
                         </a>
                         <h3>SoundCloud</h3>
                         <!--<p class="text-muted">You have to make your websites with love these days!</p>-->
@@ -408,7 +407,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
-                    <p>Reach out to me if you need a developer for your next game or virtual reality project!</p>
+                    <p>Reach out to me if you need a developer or sound produced for your next game, virtual reality, or music project!</p>
                 </div>
                 <div class="col-lg-12 text-center">
                     <a href="mailto:ejmann@udel.edu">
