--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About EJ</h2>
                     <hr class="light">
-                    <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way in his career. During his undergraduate career at Lehigh University, EJ worked hard on a scholarship and performed work study as a software auditor for Lehigh's Center of Advanced Materials and Nanotechnology. After receiving his Bachelor's in Cognitive Science, he received his Master's degree in the same at the University of Delaware. He then helped develop the AAA Northampton County Website through an internship.</p>
-                    <p class="text-faded">After receiving his Master's, he began developing touch screen menus and SQL databases for bars and restaurants and soon after that, was blessed with an opportunity to do iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
-                    <p class="text-faded">EJ has worked big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's new 360 virtual reality experience!</p>
-                    <p class="text-faded">He also now develops games in his free time for the indie game development company, Lucky Shot Media. The only thing left for him to do is develop a AAA game title, a goal he has his mind set on.</p>
+                    <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way in his career. During his undergraduate career at Lehigh University, EJ worked hard as a software auditor for Lehigh's Center of Advanced Materials and Nanotechnology through Lehigh's work study program. After receiving his Bachelor's in Cognitive Science, he earned his Master's degree in Linguistics and Cognitive Science at the University of Delaware. He then helped develop the AAA Northampton County Website through an internship.</p>
+                    <p class="text-faded">After receiving his Master's, he began developing touch screen menus and SQL databases for bars and restaurants. Soon after that, EJ was blessed with an opportunity to begin doing iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
+                    <p class="text-faded">EJ has worked with big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's new 360 virtual reality experience!</p>
+                    <p class="text-faded">In his free time, EJ plays piano, produces his own music, and develops games for the indie game development company, Lucky Shot Media.</p>
+                    <p class="text-faded"> The only thing left for him to do is develop a AAA game title, a goal he has his mind set on.</p>
                     <!--<a href="#projects" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
                 </div>
             </div>
@@ -200,7 +201,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.linkedin.com/in/mannej/" target="_blank">
-                            <img src="img/icons/linkedin.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Linkedin">
+                            <img src="img/icons/linkedin.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Linkedin">
                         </a>
                         <h3>Linkedin</h3>
                     </div>
@@ -208,7 +209,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://github.com/Eg0Jemima" target="_blank">
-                            <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Github">
+                            <img src="img/icons/github.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Github">
                         </a>
                         <h3>Github</h3>
                         <!--<p class="text-muted">You can use this theme as is, or you can make changes!</p>-->
@@ -217,7 +218,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.twitch.tv/eg0jemima" target="_blank">
-                            <img src="img/icons/twitch.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Twitch">
+                            <img src="img/icons/twitch.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitch">
                         </a>
                         <h3>Twitch</h3>
                         <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
@@ -226,7 +227,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://twitter.com/Eg0jemima" target="_blank">
-                            <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Twitter">
+                            <img src="img/icons/twitter.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Twitter">
                         </a>
                         <h3>Twitter</h3>
                         <!--<p class="text-muted">You have to make your websites with love these days!</p>-->
@@ -238,7 +239,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://connect.unity.com/u/5849fa5032b30600272b73dc" target="_blank">
-                            <img src="img/icons/unityconnect.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Unity Connect">
+                            <img src="img/icons/unityconnect.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Unity Connect">
                         </a>
                         <h3>Unity Connect</h3>
                         <!--<p class="text-muted">Our templates are updated regularly so they don't break.</p>-->
@@ -247,7 +248,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://www.hackerrank.com/Eg0jemima" target="_blank">
-                            <img src="img/icons/hackerrank.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Hackerrank">
+                            <img src="img/icons/hackerrank.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Hackerrank">
                         </a>
                         <h3>Hackerrank</h3>
                         <!--<p class="text-muted">You can use this theme as is, or you can make changes!</p>-->
@@ -256,7 +257,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="http://stackoverflow.com/users/3232829/eg0jemima" target="_blank">
-                            <img src="img/icons/stackoverflow.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="64" width="55" alt="Stack Overflow">
+                            <img src="img/icons/stackoverflow.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="64" width="55" alt="Stack Overflow">
                         </a>
                         <h3>Stack Overflow</h3>
                         <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
@@ -265,7 +266,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <a href="https://soundcloud.com/ej-mann" target="_blank">
-                            <img src="img/icons/soundcloud.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive" height="100" width="90" alt="Sound Cloud">
+                            <img src="img/icons/soundcloud.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="100" width="90" alt="Sound Cloud">
                         </a>
                         <h3>SoundCloud</h3>
                         <!--<p class="text-muted">You have to make your websites with love these days!</p>-->
@@ -335,6 +336,10 @@
                             <tr>
                                 <td>JQuery</td>
                                 <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Bootstrap</td>
+                                <td>1</td>
                             </tr>
                             <tr>
                                 <td>Eprime</td>
