- Updated meta tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 
 <head>
 
@@ -8,6 +8,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
     <meta name="author" content="Eustace R Mann Jr">
+    <meta name="keywords" content="games, apps, development, dev, game, portfolio, Mann, Jr, Eustace, EJ, java, android, c#, unity, twitch, twitter, streaming, music, edm, dj">
+    
+    <link rel="author" href="https://plus.google.com/+EJMann"/>
+
+    <meta property='og:title' content="Eustace R Mann Jr" />
+    <meta property="og:image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/1.png" />
+    <meta property='og:description' content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!" />
+    <meta property="og:site_name" content="Eustace R Mann Jr">
+    <meta property="og:see_also" content="http://ejmanngamedev.com/index.html">
+
+    <meta itemprop="name" content="Eustace R Mann Jr">
+    <meta itemprop="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
+    <meta itemprop="image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/1.png">
+
+    <meta name="twitter:card" content="Eustace R Mann Jr">
+    <meta name="twitter:url" content="http://ejmanngamedev.com">
+    <meta name="twitter:title" content="Eustace R Mann Jr">
+    <meta name="twitter:description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
+    <meta name="twitter:image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/1.png">
+    
 
     <title>Eustace R Mann Jr</title>
 
