--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <link rel="author" href="https://plus.google.com/+EJMann"/>
 
     <meta property='og:title' content="Eustace R Mann Jr" />
-    <meta property="og:image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/1.png" />
+    <meta property="og:image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/headerThumb.jpg" />
     <meta property='og:description' content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!" />
     <meta property="og:site_name" content="Eustace R Mann Jr">
     <meta property="og:see_also" content="http://ejmanngamedev.com/index.html">
 
     <meta itemprop="name" content="Eustace R Mann Jr">
     <meta itemprop="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta itemprop="image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/1.png">
+    <meta itemprop="image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/headerThumb.jpg">
 
     <meta name="twitter:card" content="Eustace R Mann Jr">
     <meta name="twitter:url" content="http://ejmanngamedev.com">
     <meta name="twitter:title" content="Eustace R Mann Jr">
     <meta name="twitter:description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
-    <meta name="twitter:image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/1.png">
+    <meta name="twitter:image" content="http://ejmanngamedev.com/img/portfolio/thumbnails/headerThumb.jpg">
 
 
     <title>Eustace R Mann Jr</title>
