- image adjustment and aframe 6.1

--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
 
-    <!-- A-Frame 0.6.0 -->
-    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -476,7 +473,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
@@ -490,6 +487,9 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
+    
+    <!-- A-Frame 0.6.1 -->
+    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 
     <aside class="bg-dark aside" id="web-vr" style="margin-bottom: -100px">
         <div class="container text-center">
@@ -504,7 +504,7 @@
         <a-scene embedded>
             <a-assets>
                 <img id="ultra" crossorigin="anonymous" src="img/ultra.jpg" poster="ultrabackup.jpg">
-                <!--<video id="ultra2017" crossorigin="anonymous" src="videos/moon360.mp4" autoplay></video>-->
+                <!--<video id="ultra2017" crossorigin="anonymous" src="videos/ultra.mp4" autoplay></video>-->
             </a-assets>
             <a-sky src="#ultra"></a-sky>
             <a-entity position="0 0 0">
