- Added links to HoloLens project playlist - Added links to Aframe scenes that are showable - Added images to be used for the new links

--- a/index.html
+++ b/index.html
@@ -203,6 +203,45 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="Microsoft HoloLens Collection">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">Microsoft HoloLens Works</div>
+                                    <div class="project-category text-faded">3 Microsoft HoloLens Apps: An interactive astronaut, a digital pet, and Spider Slayer, a game where you must swat off spiders in mixed reality (3 YouTube Videos)</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="A-Frame Web VR Playground">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">A-Frame Web VR Playground</div>
+                                    <div class="project-category text-faded">A Web VR playground where the user can move around and stretch objects using the Oculus Rift</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://three-js-avatar.glitch.me/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="Three.js Avatar Manipulator">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">Three.js Avatar Manipulator</div>
+                                    <div class="project-category text-faded">Manipulate the bones of an avatar modeled in Blender in a Three.js scene</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -354,6 +393,10 @@
                                 <td>3</td>
                             </tr>
                             <tr>
+                                <td>Three.js</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
                                 <td>JQuery</td>
                                 <td>2</td>
                             </tr>
@@ -487,7 +530,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
-    
+
     <!-- A-Frame 0.6.1 -->
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
 
