- Added Scrum Master Certificate - Added Unity Certificate - Changed Page Title

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">VR / Game Developer and Certified Scrum Master</h1>
+                <h1 id="homeHeading">Certified Scrum Master in Games and Virtual Reality</h1>
                 <hr>
                 <p>Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
@@ -494,6 +494,24 @@
                             <tr>
                                 <td>Microsoft HoloLens (Unity)</td>
                                 <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered table-inversed">
+                        <thead class="thead-inverse">
+                            <tr>
+                                <th>Certifications</th>
+                                <th>Date Acquired</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/MannUnityCert092017.png">Unity Certified Developer</a></td>
+                                <td>09/2017</td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="img/certifications/MannScrumCert032017.png">Certified Scrum Master</a></td>
+                                <td>03/2017</td>
                             </tr>
                         </tbody>
                     </table>
