--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="https://soundcloud.com/ej-mann" target="_blank">
+                        <a href="https://soundcloud.com/mannmademusik" target="_blank">
                             <img src="img/icons/soundcloud.png" class="fa fa-4x fa-diamond text-primary sr-icons img-responsive socialmedia" height="100" width="90" alt="Sound Cloud">
                         </a>
                         <h3>SoundCloud</h3>
