--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Certified Scrum Master in Games and Virtual Reality</h1>
+                <h1 id="homeHeading">Certified Scrum Master specializing in Virtual Reality & Game Development</h1>
                 <hr>
                 <p>Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
@@ -131,10 +131,10 @@
         </div>
     </aside>
 
-    <section class="no-padding">
+    <section class="no-padding" style="background-color: blue">
         <div class="container-fluid">
             <div class="row no-gutter"> <!--popup-gallery-->
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4">
                     <a href="videos/xvrtrailer.mp4" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/1.png" class="img-responsive" alt="Xfinity VR">
                         <div class="portfolio-box-caption">
@@ -145,68 +145,21 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://play.google.com/store/apps/details?id=com.bossblockbasketball.bossblockbasketball" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/2.png" class="img-responsive" alt="Boss Block Basketball">
+                <div class="col-lg-4">
+                    <a href="https://legend-waitress.herokuapp.com" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/12.png" class="img-responsive" alt="Comcast Social Web VR">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
-                                    <div class="project-name">Boss Block Basketball</div>
-                                    <div class="project-category text-faded">A casual swipe and shoot basketball game made with Unity for Android and iOS</div>
+                                    <div class="project-name">Comcast Social Web VR</div>
+                                    <div class="project-category text-faded">A social virtual reality experience where multiple players can view the same movie trailer & teleport around the map</div>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.teamups.net/teamup/3227/Stella-First-Flight" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Stella: First Flight">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">Stella: First Flight</div>
-                                <div class="project-category text-faded">A casual 2D side scroller space game made with Unity for Android and iOS</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/4.png" class="img-responsive" alt="AAA Northampton County Website">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">AAA Northampton County Website</div>
-                                    <div class="project-category text-faded">A website designed with HTML5, CSS3, and Javascript to assist AAA members in Pennsylvania's Northampton County with their roadside needs</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://play.google.com/store/apps/details?id=com.ecotechmarine.ecosmartlive_android&hl=en" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/5.png" class="img-responsive" alt="EcoSmart Live">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">EcoSmart Live</div>
-                                <div class="project-category text-faded">An Android application that turns your cell phone into a remote control for fish tank lights and pumps</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.mrblueshirt.com/" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="Mr. Blue Shirt Website">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">Mr. Blue Shirt Website</div>
-                                    <div class="project-category text-faded">A website designed with HTML5, CSS3, and Jquery to promote the Mr. Blue Shirt film series produced by Michael Stewart and Reckoning Force Productions</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+
+                <div class="col-lg-4">
                     <a href="https://aframe-demo.glitch.me/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/7.png" class="img-responsive" alt="A-Frame Web VR Playground">
                         <div class="portfolio-box-caption">
@@ -219,7 +172,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4">
                     <a href="https://three-js-avatar.glitch.me/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/8.png" class="img-responsive" alt="Three.js Avatar Manipulator">
                         <div class="portfolio-box-caption">
@@ -233,7 +186,36 @@
                     </a>
                 </div>
 
-                <div class="col-lg-4 col-sm-6">
+
+
+                <div class="col-lg-4">
+                    <a href="https://comcast-labs-ar-room.glitch.me/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/10.png" class="img-responsive" alt="Augmented Reality Model">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">Augmented Reality Model</div>
+                                    <div class="project-category text-faded">A reconstucted model of an old workroom using Android's augmented reality constructor & A-Frame Web VR</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4">
+                    <a href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/11.png" class="img-responsive" alt="180 Degree VR Movie Player">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">180 VR Movie Player</div>
+                                    <div class="project-category text-faded">180 Degree Movie Player developed for Web VR</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
                     <a href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/9.png" class="img-responsive" alt="Microsoft HoloLens Collection">
                         <div class="portfolio-box-caption">
@@ -242,6 +224,69 @@
                                     <div class="project-name">Microsoft HoloLens Works</div>
                                     <div class="project-category text-faded">3 Microsoft HoloLens Apps: An interactive astronaut, a digital pet, and Spider Slayer, a game where you must swat off spiders in mixed reality (3 YouTube Videos)</div>
                                 </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-lg-4">
+                    <a href="https://play.google.com/store/apps/details?id=com.ecotechmarine.ecosmartlive_android&hl=en" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/5.png" class="img-responsive" alt="EcoSmart Live">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">EcoSmart Live</div>
+                                <div class="project-category text-faded">An Android application that turns your cell phone into a remote control for fish tank lights and pumps</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="http://www.mrblueshirt.com/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="Mr. Blue Shirt Website">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">Mr. Blue Shirt Website</div>
+                                    <div class="project-category text-faded">A website designed with HTML5, CSS3, and Jquery to promote the Mr. Blue Shirt film series produced by Michael Stewart and Reckoning Force Productions</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/4.png" class="img-responsive" alt="AAA Northampton County Website">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">AAA Northampton County Website</div>
+                                    <div class="project-category text-faded">A website designed with HTML5, CSS3, and Javascript to assist AAA members in Pennsylvania's Northampton County with their roadside needs</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="https://play.google.com/store/apps/details?id=com.bossblockbasketball.bossblockbasketball" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/2.png" class="img-responsive" alt="Boss Block Basketball">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">Boss Block Basketball</div>
+                                    <div class="project-category text-faded">A casual swipe and shoot basketball game made with Unity for Android and iOS</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="http://www.teamups.net/teamup/3227/Stella-First-Flight" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Stella: First Flight">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">Stella: First Flight</div>
+                                <div class="project-category text-faded">A casual 2D side scroller space game made with Unity for Android and iOS</div>
                             </div>
                         </div>
                     </a>
@@ -365,12 +410,16 @@
                                 <td>7</td>
                             </tr>
                             <tr>
+                                <td>Javascript</td>
+                                <td>5</td>
+                            </tr>
+                            <tr>
                                 <td>SQL</td>
                                 <td>5</td>
                             </tr>
                             <tr>
                                 <td>C#</td>
-                                <td>3</td>
+                                <td>4</td>
                             </tr>
                             <tr>
                                 <td>C++</td>
@@ -391,10 +440,6 @@
                             <tr>
                                 <td>CSS</td>
                                 <td>5</td>
-                            </tr>
-                            <tr>
-                                <td>Javascript</td>
-                                <td>3</td>
                             </tr>
                             <tr>
                                 <td>Three.js</td>
@@ -473,11 +518,15 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>HTC Vive (Unity)</td>
-                                <td>1</td>
+                                <td>Web-VR (A-Frame)</td>
+                                <td>2</td>
                             </tr>
                             <tr>
                                 <td>Oculus Rift (Unity)</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>HTC Vive (Unity)</td>
                                 <td>1</td>
                             </tr>
                             <tr>
@@ -486,10 +535,6 @@
                             </tr>
                             <tr>
                                 <td>Samsung Gear (Unity)</td>
-                                <td>1</td>
-                            </tr>
-                            <tr>
-                                <td>Web-VR (A-Frame)</td>
                                 <td>1</td>
                             </tr>
                             <tr>
