--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
     </aside>
 
-    <section class="no-padding" style="background-color: blue">
+    <section class="no-padding" style="background-color: #444444">
         <div class="container-fluid">
             <div class="row no-gutter"> <!--popup-gallery-->
                 <div class="col-lg-4">
@@ -203,12 +203,12 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <a href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" class="portfolio-box" target="_blank">
+                    <a href="https://180-vr-player.glitch.me/" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/11.png" class="img-responsive" alt="180 Degree VR Movie Player">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
-                                    <div class="project-name">180 VR Movie Player</div>
+                                    <div class="project-name">180 Degree VR Movie Player</div>
                                     <div class="project-category text-faded">180 Degree Movie Player developed for Web VR</div>
                                 </div>
                             </div>
@@ -295,6 +295,8 @@
         </div>
     </section>
 
+    <aside class="bg-dark"></aside>
+
     <section id="socialmedia">
         <div class="container">
             <div class="row">
@@ -304,6 +306,7 @@
                 </div>
             </div>
         </div>
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -606,7 +609,7 @@
         </div>
     </aside>
 
-    <div style="width: 100%; height: 50%; float:right; margin-top:100px; padding-bottom:100px; padding-left:20%; padding-right: 20%; background-color: #222;">
+    <div style="width: 100%; height: 50%; float:right; margin-top:100px; padding-bottom:100px; padding-left:20%; padding-right: 20%; background-color: #444;">
         <a-scene embedded>
             <a-sky src="img/ultra.jpg"></a-sky>
             <a-entity position="0 0 0">
