--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- A-Frame 0.6.1 -->
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <!-- A-Frame 0.8.2 -->
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -605,9 +605,7 @@
     <div style="width: 100%; height: 50%; float:right; margin-top:100px; padding-bottom:100px; padding-left:20%; padding-right: 20%; background-color: #444;">
         <a-scene embedded>
             <a-sky src="img/ultra.jpg"></a-sky>
-            <a-entity position="0 0 0">
-                <a-camera></a-camera>
-            </a-entity>
+            <a-entity camera look-controls></a-entity>
         </a-scene>
     </div>
 
