Added Python & Node skills

--- a/index.html
+++ b/index.html
@@ -438,12 +438,20 @@
                                 <td>5</td>
                             </tr>
                             <tr>
+                                <td>JQuery</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
                                 <td>Three.js</td>
                                 <td>1</td>
                             </tr>
                             <tr>
-                                <td>JQuery</td>
-                                <td>2</td>
+                                <td>Node.js</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Python</td>
+                                <td>1</td>
                             </tr>
                             <tr>
                                 <td>Bootstrap</td>
