Added image for scene generator page - Added thumbnail for scene generator page - Replaced Stella First Flight with A-Frame Scene Generator

--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@
                     </a>
                 </div>
                 <div class="col-lg-3">
+                    <a href="https://scene-generator.glitch.me/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Scene Generator">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">A-Frame Scene Generator</div>
+                                <div class="project-category text-faded">A Web VR that lets users use voice commands to spawn objects in random places</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3">
                     <a href="https://www.youtube.com/playlist?list=PLwOpE5mgplNaqZ4qnQ6j0jWn-F6xZVJ8z" class="portfolio-box" target="_blank">
                         <img src="img/portfolio/thumbnails/9.png" class="img-responsive" alt="Microsoft HoloLens Collection">
                         <div class="portfolio-box-caption">
@@ -269,17 +280,6 @@
                                     <div class="project-name">Boss Block Basketball</div>
                                     <div class="project-category text-faded">A casual swipe and shoot basketball game made with Unity for Android and iOS</div>
                                 </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="http://www.teamups.net/teamup/3227/Stella-First-Flight" class="portfolio-box" target="_blank">
-                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="Stella: First Flight">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">Stella: First Flight</div>
-                                <div class="project-category text-faded">A casual 2D side scroller space game made with Unity for Android and iOS</div>
                             </div>
                         </div>
                     </a>
